# factos_adk_v1

./: .env.example  .gcloudignore  .gitignore  DEPLOYMENT_STATUS.md  Dockerfile  FIRECRAWL_HTTP.md  PERFORMANCE_OPTIMIZATIONS.md  PLANNING.md  README.md  SECURITY_REMEDIATION.md  api_test.html  architecture.json  clean_git_history.sh  cloudrun-service.yaml  deploy-fast.sh  deploy.sh  docker-compose.firecrawl.yml  pyproject.toml  requirements.txt  setup.py  test_agui_structure.py  test_analysis_direct.py  test_analysis_quality.py  test_api_simple.py  test_complete_pipeline.py  test_end_to_end.py  test_final_enhanced.py  test_final_system.py  test_guardian_url.py  test_improved_analysis.py  test_improved_system.py  test_improvements.py  test_integration.py  test_performance_optimizations.py  test_pipeline_complete.py  test_production_api.py  test_scraper.py  update_api_key.sh  update_cloud_run_env.sh
adk_project/: .env  README.md  agent.py  test_agent_config.py  test_root_agent.py
adk_project/agents/: root_agent.py
adk_project/agents/claim_extractor_agent/: __init__.py  (+2 more)
adk_project/api/: main.py
adk_project/deployment/: remote.py  vertex_ai.md  vertex_ai.py
adk_project/messages/: extracted_claim.py  match_results.py  scored_result.py  validated_article.py
adk_project/protocols/: a2a_protocol.py  agui_response.py
adk_project/tests/: __init__.py  test_factchecker_end_to_end.py  test_factchecker_scraping.py  test_factchecker_subdomain_general.py  test_real_url.py  test_root_agent.py  test_subdomain_factchecker.py
adk_project/utils/: firecrawl.py
~/: .zshrc
(+14 files in other folders)
